update with the bib files and new paper notification which is regarding the GPT

--- a/index.html
+++ b/index.html
@@ -212,6 +212,11 @@
 
 								<li class="row-fluid">
                                     <span class="news-date span3">Nov, 2023</span>
+                                    <span class="news-content span9">Our paper <a href="papers/articles/mogavi_usergpt_chb23.pdf" target="_blank">"ChatGPT in education: A blessing or a curse? A qualitative study exploring early adopters’ utilization and perceptions"</a> is accepted to Computers in Human Behavior: Artificial Humans 2023 <font color="red">[Paper]</font></span>
+                                </li>
+
+								<li class="row-fluid">
+                                    <span class="news-date span3">Nov, 2023</span>
                                     <span class="news-content span9">I presented 2 talks regarding data-and memory-efficient continual learning and on-device training at the extreme edge at <a href="https://sensys.acm.org/2023/" target="_blank">SenSys 2023</a> <font color="red">[Talk]</font>
                                     </span>
                                 </li>
@@ -345,15 +350,6 @@
 										| <a href="https://arxiv.org/abs/2307.09988" target="_blank">Link</a>
 									</p></li>
 
-									<li id="preprints-usergpt">
-									<p>
-										<b>Exploring User Perspectives on ChatGPT: Applications, Perceptions, and Implications for AI-Integrated Education</b><br>
-										<font color="#aaaaaa">Reza Hadi Mogavi, Chao Deng, Justin Juho Kim, Pengyuan Zhou, <font color="#000000"><u>Young D. Kwon</u></font>, Ahmed Hosny Saleh Metwally, Ahmed Tlili, Simone Bassanelli, Antonio Bucchiarone, Sujit Gujar, Lennart E. Nacke, and Pan Hui</font><br>
-										<i><font color="red">arXiv 2023</font></i>
-										| <a href="papers/articles/mogavi_usergpt_2023.pdf" target="_blank">PDF</a>
-										| <a href="https://arxiv.org/abs/2305.13114" target="_blank">Link</a>
-									</p></li>
-
 									<li id="preprints-hidenseek">
 									<p>
 										<b>HideNseek: Federated Lottery Ticket via Server-side Pruning and Sign Supermask</b><br>
@@ -383,7 +379,17 @@
 										<font color="#aaaaaa"><font color="#000000"><u>Young D. Kwon</u></font>, Jagmohan Chauhan, Hong Jia, and Stylianos I. Venieris, and Cecilia Mascolo</font><br>
 										<i><font color="red">SenSys 2023</font></i>
 										| <a href="papers/articles/kwon_lifelearner_sensys23.pdf" target="_blank">PDF</a>
-										| <a href="papers/bibs/kwon_lifelearner_sensys23.txt" target="_blank">BibTex</a>
+										| <a href="papers/bibs/kwon_lifelearner_sensys23.bib" target="_blank">BibTex</a>
+									</p></li>
+
+									<li id="publication-usergpt">
+									<p>
+										<b>ChatGPT in education: A blessing or a curse? A qualitative study exploring early adopters’ utilization and perceptions</b><br>
+										<font color="#aaaaaa">Reza Hadi Mogavi, Chao Deng, Justin Juho Kim, Pengyuan Zhou, <font color="#000000"><u>Young D. Kwon</u></font>, Ahmed Hosny Saleh Metwally, Ahmed Tlili, Simone Bassanelli, Antonio Bucchiarone, Sujit Gujar, Lennart E. Nacke, and Pan Hui</font><br>
+										<i><font color="red">Computers in Human Behavior: Artificial Humans 2023</font></i>
+										| <a href="papers/articles/mogavi_usergpt_chb23.pdf" target="_blank">PDF</a>
+										| <a href="papers/bibs/mogavi_usergpt_chb23.bib" target="_blank">BibTex</a>
+										| <a href="https://doi.org/10.1016/j.chbah.2023.100027" target="_blank">Link</a>
 									</p></li>
 
 
@@ -393,7 +399,7 @@
 										<font color="#aaaaaa"><font color="#000000"><u>Young D. Kwon</u></font>, Jagmohan Chauhan, and Cecilia Mascolo</font><br>
 										<i><font color="red">IPSN 2022</font></i>
 										| <a href="papers/articles/kwon_yono_ipsn22.pdf" target="_blank">PDF</a>
-										| <a href="papers/bibs/kwon_yono_ipsn22.txt" target="_blank">BibTex</a>
+										| <a href="papers/bibs/kwon_yono_ipsn22.bib" target="_blank">BibTex</a>
 										| <a href="https://ieeexplore.ieee.org/abstract/document/9826043" target="_blank">Link</a>
 									</p></li>
 
@@ -403,7 +409,7 @@
 										<font color="#aaaaaa">Nhat Pham, Hong Jia, Minh Tran, Tuan Dinh, Nam Bui, <font color="#000000"><u>Young D. Kwon</u></font>, Dong Ma, VP Nguyen, Cecilia Mascolo, Tam Vu</font><br>
 										<i><font color="red">MobiCom 2022</font></i>
 										| <a href="papers/articles/pham_pros_mobicom22.pdf" target="_blank">PDF</a>
-										| <a href="papers/bibs/pham_pros_mobicom22.txt" target="_blank">BibTex</a>
+										| <a href="papers/bibs/pham_pros_mobicom22.bib" target="_blank">BibTex</a>
 										| <a href="https://dl.acm.org/doi/10.1145/3495243.3560533" target="_blank">Link</a>
 									</p></li>
 
@@ -413,7 +419,7 @@
 										<font color="#aaaaaa">Jagmohan Chauhan, <font color="#000000"><u>Young D. Kwon</u></font>, and Cecilia Mascolo</font><br>
 										<i><font color="red">EUSIPCO 2022</font></i>
 										| <a href="papers/articles/chauhan_on-device-fsl_euspico22.pdf" target="_blank">PDF</a>
-										| <a href="papers/bibs/chauhan_on-device-fsl_euspico22.txt" target="_blank">BibTex</a>
+										| <a href="papers/bibs/chauhan_on-device-fsl_euspico22.bib" target="_blank">BibTex</a>
 										| <a href="https://ieeexplore.ieee.org/document/9909551" target="_blank">Link</a>
 									</p></li>
 
@@ -423,7 +429,7 @@
 										<font color="#aaaaaa">Kirill A. Shatilov, <font color="#000000"><u>Young D. Kwon</u></font>, Lik-Hang Lee, Dimitris Chatzopoulos, and Pan Hui</font><br>
 										<i><font color="red">TMC 2022</font></i>
 										| <a href="papers/articles/shatilov_myokey_tmc22.pdf" target="_blank">PDF</a>
-										| <a href="papers/bibs/shatilov_myokey_tmc22.txt" target="_blank">BibTex</a>
+										| <a href="papers/bibs/shatilov_myokey_tmc22.bib" target="_blank">BibTex</a>
 										| <a href="https://ieeexplore.ieee.org/document/9737726" target="_blank">Link</a>
 									</p></li>
 
@@ -433,7 +439,7 @@
 										<font color="#aaaaaa">Anish Krishna Vallapuram, <font color="#000000"><u>Young D. Kwon</u></font>, Lik-Hang Lee, Fengli Xu, Pan Hui</font><br>
 										<i><font color="red">ASONAM 2022</font></i>
 										| <a href="papers/articles/vallapuram_causal_asonam22.pdf" target="_blank">PDF</a>
-										| <a href="papers/bibs/vallapuram_causal_asonam22.txt" target="_blank">BibTex</a>
+										| <a href="papers/bibs/vallapuram_causal_asonam22.bib" target="_blank">BibTex</a>
 										| <a href="https://www.computer.org/csdl/proceedings-article/asonam/2022/10068687/1LKx71udlcI" target="_blank">Link</a>
 									</p></li>
 
@@ -443,7 +449,7 @@
 										<font color="#aaaaaa">Anish Das, <font color="#000000"><u>Young D. Kwon</u></font>, Jagmohan Chauhan, and Cecilia Mascolo</font><br>
 										<i><font color="red">PerFail (PerCom 2022 Workshop)</font></i>
 										| <a href="papers/articles/das_gpu-training_percom22.pdf" target="_blank">PDF</a>
-										| <a href="papers/bibs/das_gpu-training_percom22.txt" target="_blank">BibTex</a>
+										| <a href="papers/bibs/das_gpu-training_percom22.bib" target="_blank">BibTex</a>
 										| <a href="https://ieeexplore.ieee.org/document/9767442" target="_blank">Link</a>
 									</p></li>
 
@@ -453,7 +459,7 @@
 										<font color="#aaaaaa"><font color="#000000"><u>Young D. Kwon</u></font>, Jagmohan Chauhan, Abhishek Kumar, Pan Hui, and Cecilia Mascolo</font><br>
 										<i><font color="red">SEC 2021</font></i>
 										| <a href="papers/articles/kwon_exploring_sec21.pdf" target="_blank">PDF</a>
-										| <a href="papers/bibs/kwon_exploring_sec21.txt" target="_blank">BibTex</a>
+										| <a href="papers/bibs/kwon_exploring_sec21.bib" target="_blank">BibTex</a>
 										| <a href="https://arxiv.org/abs/2110.13290" target="_blank">Link</a>
 										<br><award><b>Best Paper Award</b></award>
 									</p></li>
@@ -464,7 +470,7 @@
 										<font color="#aaaaaa">Anish Krishna Vallapuram, Nikhil Nanda, <font color="#000000"><u>Young D. Kwon</u></font>, and Pan Hui</font><br>
 										<i><font color="red">ASONAM 2021</font></i>
 										| <a href="papers/articles/vallapuram_interpretable_asonam21.pdf" target="_blank">PDF</a>
-										| <a href="papers/bibs/vallapuram_interpretable_asonam21.txt" target="_blank">BibTex</a>
+										| <a href="papers/bibs/vallapuram_interpretable_asonam21.bib" target="_blank">BibTex</a>
 										| <a href="https://dl.acm.org/doi/abs/10.1145/3487351.3488353" target="_blank">Link</a>
 									</p></li>
 
@@ -474,7 +480,7 @@
 										<font color="#aaaaaa">Liang-Yu Chen, Yutong Chen, <font color="#000000"><u>Young D. Kwon</u></font>, Youwen Kang, and Pan Hui</font><br>
 										<i><font color="red">ASONAM 2021</font></i>
 										| <a href="papers/articles/chen_ian_asonam21.pdf" target="_blank">PDF</a>
-										| <a href="papers/bibs/chen_ian_asonam21.txt" target="_blank">BibTex</a>
+										| <a href="papers/bibs/chen_ian_asonam21.bib" target="_blank">BibTex</a>
 										| <a href="https://dl.acm.org/doi/10.1145/3487351.3488328" target="_blank">Link</a>
 									</p></li>
 
@@ -484,7 +490,7 @@
 										<font color="#aaaaaa"><font color="#000000"><u>Young D. Kwon</u></font>, Jagmohan Chauhan, and Cecilia Mascolo</font><br>
 										<i><font color="red">Interspeech 2021</font></i>
 										| <a href="papers/articles/kwon_fasticarl_interspeech21.pdf" target="_blank">PDF</a>
-										| <a href="papers/bibs/kwon_fasticarl_interspeech21.txt" target="_blank">BibTex</a>
+										| <a href="papers/bibs/kwon_fasticarl_interspeech21.bib" target="_blank">BibTex</a>
 										| <a href="https://www.isca-speech.org/archive/interspeech_2021/kwon21_interspeech.html" target="_blank">Link</a>
 									</p></li>
 
@@ -493,7 +499,7 @@
 										<font color="#aaaaaa">Sandra Servia Rodriguez, Cecilia Mascolo, and <font color="#000000"><u>Young D. Kwon</u></font> </font><br>
 										<i><font color="red">arXiv</font></i>
 										| <a href="papers/articles/servia-rodriguez_knowing_arxiv21.pdf" target="_blank">PDF</a>
-										| <a href="papers/bibs/servia-rodriguez_knowing_arxiv21.txt" target="_blank">BibTex</a>
+										| <a href="papers/bibs/servia-rodriguez_knowing_arxiv21.bib" target="_blank">BibTex</a>
 										| <a href="https://arxiv.org/abs/2106.05872" target="_blank">Link</a>
 									</p></li>
 
@@ -502,7 +508,7 @@
 										<font color="#aaaaaa">Jagmohan Chauhan, <font color="#000000"><u>Young D. Kwon</u></font>, Pan Hui, and Cecilia Mascolo</font><br>
 										<i><font color="red">IMWUT/UbiComp 2021</font></i>
 										| <a href="papers/articles/chauhan_contauth_imwut20.pdf" target="_blank">PDF</a>
-										| <a href="papers/bibs/chauhan_contauth_imwut20.txt" target="_blank">BibTex</a>
+										| <a href="papers/bibs/chauhan_contauth_imwut20.bib" target="_blank">BibTex</a>
 										| <a href="https://dl.acm.org/doi/10.1145/3432203" target="_blank">Link</a>
 									</p></li>
 
@@ -511,7 +517,7 @@
 										<font color="#aaaaaa">Abhishek Kumar, Tristan Braud, <font color="#000000"><u>Young D. Kwon</u></font>, and Pan Hui</font><br>
 										<i><font color="red">IMWUT/UbiComp 2021</font></i>
 										| <a href="papers/articles/kumar_aquilis_imwut20.pdf" target="_blank">PDF</a>
-										| <a href="papers/bibs/kumar_aquilis_imwut20.txt" target="_blank">BibTex</a>
+										| <a href="papers/bibs/kumar_aquilis_imwut20.bib" target="_blank">BibTex</a>
 										| <a href="https://dl.acm.org/doi/10.1145/3432205" target="_blank">Link</a>
 									</p></li>
 
@@ -520,7 +526,7 @@
 										<font color="#aaaaaa">Ehsan Ul Haq, Tristan Braud, <font color="#000000"><u>Young D. Kwon</u></font>, and Pan Hui</font><br>
 										<i><font color="red">ASONAM 2020</font></i>
 										| <a href="papers/articles/haq_enemy_asonam20.pdf" target="_blank">PDF</a>
-										| <a href="papers/bibs/haq_enemy_asonam20.txt" target="_blank">BibTex</a>
+										| <a href="papers/bibs/haq_enemy_asonam20.bib" target="_blank">BibTex</a>
 									</p></li>
 
 									<li id="publication-survey-comp-politics"><p>
@@ -528,7 +534,7 @@
 										<font color="#aaaaaa">Ehsan Ul Haq, Tristan Braud, <font color="#000000"><u>Young D. Kwon</u></font>, and Pan Hui.</font><br>
 										<i><font color="red">IEEE Access</font></i>
 										| <a href="papers/articles/haq_survey_access20.pdf" target="_blank">PDF</a>
-										| <a href="papers/bibs/haq_survey_access20.txt" target="_blank">BibTex</a>
+										| <a href="papers/bibs/haq_survey_access20.bib" target="_blank">BibTex</a>
 										| <a href="https://ieeexplore.ieee.org/document/9245490" target="_blank">Link</a>
 									</p></li>
 
@@ -538,7 +544,7 @@
 										<i><font color="red">PerCom 2020 WIP</font></i>
 										| <a href="papers/articles/kwon_myokey_percom20.pdf" target="_blank">PDF</a>
 										| <a href="papers/slides/slides_kwon_myokey_percom20.pdf" target="_blank">Slides</a>
-										| <a href="papers/bibs/kwon_myokey_percom20.txt" target="_blank">BibTex</a>
+										| <a href="papers/bibs/kwon_myokey_percom20.bib" target="_blank">BibTex</a>
 										| <a href="https://ieeexplore.ieee.org/abstract/document/9156084" target="_blank">Link</a>
 									</p></li>
 
@@ -548,7 +554,7 @@
 										<i><font color="red">IMWUT/UbiComp 2019</font></i>
 										| <a href="papers/articles/kwon_geolifecycle_imwut19.pdf" target="_blank">PDF</a>
 										| <a href="papers/slides/slides_kwon_geolifecycle_imwut19.pdf" target="_blank">Slides</a>
-										| <a href="papers/bibs/kwon_geolifecycle_imwut19.txt" target="_blank">BibTex</a>
+										| <a href="papers/bibs/kwon_geolifecycle_imwut19.bib" target="_blank">BibTex</a>
 										| <a href="https://dl.acm.org/citation.cfm?id=3351250" target="_blank">Link</a>
 									</p></li>
 									
@@ -558,7 +564,7 @@
 										<i><font color="red">ASONAM 2019</font></i>
 										| <a href="papers/articles/kwon_self-disclosure_asonam19.pdf" target="_blank">PDF</a>
 										| <a href="papers/slides/slides_kwon_self-disclosure_asonam19.pdf" target="_blank">Slides</a>
-										| <a href="papers/bibs/kwon_self-disclosure_asonam19.txt" target="_blank">BibTex</a>
+										| <a href="papers/bibs/kwon_self-disclosure_asonam19.bib" target="_blank">BibTex</a>
 										| <a href="https://dl.acm.org/doi/10.1145/3341161.3342881" target="_blank">Link</a>
 										<br><award><b>Oral Presentation, Full Paper Acceptance Rate: 14%</b></award>
 									</p></li>
@@ -568,7 +574,7 @@
 										<font color="#aaaaaa"><font color="#000000"><u>Young D. Kwon</u></font>, Mohammed Khwaja, Neille-Ann H. Tan, Marla Narazani, Mikolaj P. Wozniak, Arshad Nasser, Rahul Majethia, Lucy Van Kleunen, Victoria Neumann, and Rajkarn Singh</font><br>
 										<i><font color="red">IEEE Pervasive Computing, 2019 (Impact Factor: 3.813)</font></i>
 										| <a href="papers/articles/kwon_ubicomp_pervasive19.pdf" target="_blank">PDF</a>
-										| <a href="papers/bibs/kwon_ubicomp_pervasive19.txt" target="_blank">BibTex</a>
+										| <a href="papers/bibs/kwon_ubicomp_pervasive19.bib" target="_blank">BibTex</a>
 										| <a href="https://ieeexplore.ieee.org/document/8968799?source=authoralert" target="_blank">Link</a>
 									</p></li>
 
