--- a/log.html
+++ b/log.html
@@ -124,6 +124,11 @@
 
                                 <li class="row-fluid">
                                     <span class="news-date span3">Nov, 2023</span>
+                                    <span class="news-content span9">Our paper <a href="papers/articles/mogavi_usergpt_chb23.pdf" target="_blank">"ChatGPT in education: A blessing or a curse? A qualitative study exploring early adopters’ utilization and perceptions"</a> is accepted to Computers in Human Behavior: Artificial Humans 2023 <font color="red">[Paper]</font></span>
+                                </li>
+                                
+                                <li class="row-fluid">
+                                    <span class="news-date span3">Nov, 2023</span>
                                     <span class="news-content span9">I presented 2 talks regarding data-and memory-efficient continual learning and on-device training at the extreme edge at <a href="https://sensys.acm.org/2023/" target="_blank">SenSys 2023</a> <font color="red">[Talk]</font>
                                     </span>
                                 </li>
