added ur2m, percom paper, update

--- a/index.html
+++ b/index.html
@@ -211,6 +211,11 @@
 							<ul class="news">
 
 								<li class="row-fluid">
+                                    <span class="news-date span3">Dec, 2023</span>
+                                    <span class="news-content span9">Our paper <a href="">"UR2M: Uncertainty and Resource-Aware Event Detection on Microcontrollers"</a> is accepted to PerCom 2024 (Accpetance Rate: 14.5%) <font color="red">[To appear soon]</font></span>
+                                </li>
+
+								<li class="row-fluid">
                                     <span class="news-date span3">Nov, 2023</span>
                                     <span class="news-content span9">Our paper <a href="papers/articles/mogavi_usergpt_chb23.pdf" target="_blank">"ChatGPT in education: A blessing or a curse? A qualitative study exploring early adopters’ utilization and perceptions"</a> is accepted to Computers in Human Behavior: Artificial Humans 2023 <font color="red">[Paper]</font></span>
                                 </li>
@@ -372,7 +377,17 @@
 							<div class="span12">
 								<div class="section">Selected Publications</div>
 								<ul>
-									
+
+									<li id="publication-ur2m">
+									<p>
+										<b>UR2M: Uncertainty and Resource-Aware Event Detection on Microcontrollers</b><br>
+										<font color="#aaaaaa">Hong Jia, <font color="#000000"><u>Young D. Kwon</u></font>, Dong Ma, Nhat Pham, Lorena Qendro, Tam Vu, and Cecilia Mascolo</font><br>
+										<i><font color="red">PerCom 2024</font></i>
+										<!-- | <a href="papers/articles/jia_ur2m_percom24.pdf" target="_blank">PDF</a> -->
+										| <a href="papers/bibs/jia_ur2m_percom24.bib" target="_blank">BibTex</a>
+										<br><award><b>Oral Presentation, Full Paper Acceptance Rate: 14.5%</b></award>
+									</p></li>
+
 									<li id="publication-lifelearner">
 									<p>
 										<b>LifeLearner: Hardware-Aware Meta Continual Learning System for Embedded Computing Platforms</b><br>
