--- a/log.html
+++ b/log.html
@@ -123,6 +123,11 @@
                             <ul class="news">
 
                                 <li class="row-fluid">
+                                    <span class="news-date span3">Dec, 2023</span>
+                                    <span class="news-content span9">Our paper <a href="">"UR2M: Uncertainty and Resource-Aware Event Detection on Microcontrollers"</a> is accepted to PerCom 2024 (Accpetance Rate: 14.5%) <font color="red">[To appear soon]</font></span>
+                                </li>
+
+                                <li class="row-fluid">
                                     <span class="news-date span3">Nov, 2023</span>
                                     <span class="news-content span9">Our paper <a href="papers/articles/mogavi_usergpt_chb23.pdf" target="_blank">"ChatGPT in education: A blessing or a curse? A qualitative study exploring early adopters’ utilization and perceptions"</a> is accepted to Computers in Human Behavior: Artificial Humans 2023 <font color="red">[Paper]</font></span>
                                 </li>
