--- a/research.html
+++ b/research.html
@@ -173,6 +173,16 @@
 								<div class="section">Publications</div>
 								<ul>
 
+									<li id="publication-ur2m">
+									<p>
+										<b>UR2M: Uncertainty and Resource-Aware Event Detection on Microcontrollers</b><br>
+										<font color="#aaaaaa">Hong Jia, <font color="#000000"><u>Young D. Kwon</u></font>, Dong Ma, Nhat Pham, Lorena Qendro, Tam Vu, and Cecilia Mascolo</font><br>
+										<i><font color="red">PerCom 2024</font></i>
+										<!-- | <a href="papers/articles/jia_ur2m_percom24.pdf" target="_blank">PDF</a> -->
+										| <a href="papers/bibs/jia_ur2m_percom24.bib" target="_blank">BibTex</a>
+										<br><award><b>Oral Presentation, Full Paper Acceptance Rate: 14.5%</b></award>
+									</p></li>
+
 									<li id="publication-lifelearner">
 									<p>
 										<b>LifeLearner: Hardware-Aware Meta Continual Learning System for Embedded Computing Platforms</b><br>
