added 3rd year phd report

--- a/research.html
+++ b/research.html
@@ -125,7 +125,7 @@
 										<font color="#000000"><u>Young D. Kwon</u></font><br>
 										<i><font color="red">HKUST M.Phil. Thesis</font>, January 2020</i>
 										| <a href="papers/articles/kwon_master_thesis20.pdf" target="_blank">PDF</a>
-										| <a href="papers/bibs/kwon_master_thesis20.txt" target="_blank">BibTex</a>
+										| <a href="papers/bibs/kwon_master_thesis20.bib" target="_blank">BibTex</a>
 										| <a href="http://lbezone.ust.hk/bib/991012818069003412#" target="_blank">Link</a>
 									</p></li>
 								</ul>
@@ -394,7 +394,7 @@
 										<b>Document Summarization Considering Entailment Relation between Sentences</b><br>
 										<font color="#aaaaaa"><font color="#000000"><u>Youngdae Kwon</u></font>, Noo-ri Kim, and Jee-Hyong Lee</font><br>
 										<i><font color="red">Journal of KIISE: Software and Application 2017</font></i>
-										<!-- | <a href="papers/bibs/KIISE2017_document-summarization.txt" target="_blank">Bib</a> -->
+										<!-- | <a href="papers/bibs/KIISE2017_document-summarization.bib" target="_blank">Bib</a> -->
 										| <a href="http://www.dbpia.co.kr/Journal/ArticleDetail/NODE07111233?TotalCount=0&Seq=6&isIdentifyAuthor=1&Collection=0&isFullText=0&specificParam=0&SearchMethod=0&Page=1&PageSize=20#" target="_blank">Link</a><br>
 									</p></li>
 
@@ -402,7 +402,7 @@
 										<b>Document Summarization Considering Entailment Relation between Sentences</b><br>
 										<font color="#aaaaaa"><font color="#000000"><u>Youngdae Kwon</u></font>, Noo-ri Kim, and Jee-Hyong Lee</font><br>
 										<i><font color="red">Proceedings of the KIISE conference 2016</font></i>
-										<!-- | <a href="papers/bibs/KIISE2016_document-summarization.txt" target="_blank">Bib</a> -->
+										<!-- | <a href="papers/bibs/KIISE2016_document-summarization.bib" target="_blank">Bib</a> -->
 										| <a href="http://www.dbpia.co.kr/Journal/ArticleDetail/NODE07017619?TotalCount=0&Seq=7&isIdentifyAuthor=1&Collection=0&isFullText=0&specificParam=0&SearchMethod=0&Page=1&PageSize=20" target="_blank">Link</a><br>
 										<award><b>Honorable Mention, and invited to Journal of KIISE</b></award>
 									</p></li>
@@ -411,7 +411,7 @@
 										<b>Method to Discover Novel Attribute Relationships using Social-Attribute Network in Google+</b><br>
 										<font color="#aaaaaa"><font color="#000000"><u>Youngdae Kwon</u></font>, Chung Kwan Tse, Chong Bor Hung, and Cheuk Man Chiu</font><br>
 										<i><font color="red">Proceedings of the KIISE conference 2015</font></i>
-										<!-- | <a href="papers/bibs/KIISE2015_san.txt" target="_blank">Bib</a> -->
+										<!-- | <a href="papers/bibs/KIISE2015_san.bib" target="_blank">Bib</a> -->
 										| <a href="http://www.dbpia.co.kr/Journal/ArticleDetail/NODE06602785?TotalCount=0&Seq=7&isIdentifyAuthor=1&Collection=0&isFullText=0&specificParam=0&SearchMethod=0&Page=1&PageSize=20" target="_blank">Link</a><br>
 										<award><b>Honorable Mention for undergraduate students' papers</b></award>
 									</p></li>								    
@@ -428,13 +428,22 @@
 								<div class="section">PhD Progress Reports and Manuscripts</div>
 								<ul>									
 
-									<li id="report-phd-1st-year">
+									<li id="report-phd-3rd-year">
+									<p>
+										<b>Efficient Continual Learning and On-Device Training for Mobile and IoT Dvices</b><br>
+										<font color="#000000"><u>Young D. Kwon</u></font><br>
+										<i><font color="red">University of Cambridge Ph.D. Third Year Report</font>, Sep 2023</i>
+										| <a href="papers/articles/kwon_phd_3rdyearreport23.pdf" target="_blank">PDF</a>
+										| <a href="papers/bibs/kwon_phd_3rdyearreport23.bib" target="_blank">BibTex</a>
+									</p></li>
+
+									<li id="report-phd-forum-sec21">
 									<p>
 										<b>Efficient Meta Continual Learning on the Edge</b><br>
 										<font color="#000000"><u>Young D. Kwon</u></font><br>
 										<i><font color="red">SEC '21 Ph.D. Forum</font>, Dec 2021</i>
 										| <a href="papers/articles/kwon_efficientMetaCL_sec21.pdf" target="_blank">PDF</a>
-										| <a href="papers/bibs/kwon_efficientMetaCL_sec21.txt" target="_blank">BibTex</a>
+										| <a href="papers/bibs/kwon_efficientMetaCL_sec21.bib" target="_blank">BibTex</a>
 									</p></li>
 
 									<li id="report-phd-1st-year">
@@ -443,7 +452,7 @@
 										<font color="#000000"><u>Young D. Kwon</u></font><br>
 										<i><font color="red">University of Cambridge Ph.D. First Year Report</font>, June 2021</i>
 										| <a href="papers/articles/kwon_phd_1styearreport21.pdf" target="_blank">PDF</a>
-										| <a href="papers/bibs/kwon_phd_1styearreport21.txt" target="_blank">BibTex</a>
+										| <a href="papers/bibs/kwon_phd_1styearreport21.bib" target="_blank">BibTex</a>
 									</p></li>
 
 									<li><p>
