edited acceptance rate of sensys 2023's LifeLearner paper

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 
                                 <li class="row-fluid">
                                     <span class="news-date span3">Oct, 2023</span>
-                                    <span class="news-content span9">Our paper <a href="papers/articles/kwon_lifelearner_sensys23.pdf" target="_blank">"LifeLearner: Hardware-Aware Meta Continual Learning System for Embedded Computing Platforms"</a> is accepted to SenSys 2023 <font color="red">[Paper]</font></span>
+                                    <span class="news-content span9">Our paper <a href="papers/articles/kwon_lifelearner_sensys23.pdf" target="_blank">"LifeLearner: Hardware-Aware Meta Continual Learning System for Embedded Computing Platforms"</a> is accepted to SenSys 2023 (Accpetance Rate: 18.9%) <font color="red">[Paper]</font></span>
                                 </li>
 
 
@@ -395,6 +395,7 @@
 										<i><font color="red">SenSys 2023</font></i>
 										| <a href="papers/articles/kwon_lifelearner_sensys23.pdf" target="_blank">PDF</a>
 										| <a href="papers/bibs/kwon_lifelearner_sensys23.bib" target="_blank">BibTex</a>
+										<br><award><b>Oral Presentation, Full Paper Acceptance Rate: 18.9%</b></award>
 									</p></li>
 
 									<li id="publication-usergpt">
