--- a/log.html
+++ b/log.html
@@ -140,9 +140,8 @@
 
                                 <li class="row-fluid">
                                     <span class="news-date span3">Oct, 2023</span>
-                                    <span class="news-content span9">Our paper <a href="papers/articles/kwon_lifelearner_sensys23.pdf" target="_blank">"LifeLearner: Hardware-Aware Meta Continual Learning System for Embedded Computing Platforms"</a> is accepted to SenSys 2023 <font color="red">[Paper]</font></span>
+                                    <span class="news-content span9">Our paper <a href="papers/articles/kwon_lifelearner_sensys23.pdf" target="_blank">"LifeLearner: Hardware-Aware Meta Continual Learning System for Embedded Computing Platforms"</a> is accepted to SenSys 2023 (Accpetance Rate: 18.9%) <font color="red">[Paper]</font></span>
                                 </li>
-
 
                                 <li class="row-fluid">
                                     <span class="news-date span3">Sep, 2023</span>
