--- a/research.html
+++ b/research.html
@@ -190,6 +190,7 @@
 										<i><font color="red">SenSys 2023</font></i>
 										| <a href="papers/articles/kwon_lifelearner_sensys23.pdf" target="_blank">PDF</a>
 										| <a href="papers/bibs/kwon_lifelearner_sensys23.bib" target="_blank">BibTex</a>
+										<br><award><b>Oral Presentation, Full Paper Acceptance Rate: 18.9%</b></award>
 									</p></li>
 
 									<li id="publication-usergpt">
