added ur2m paper and updated the talk with efficientML reading group

--- a/log.html
+++ b/log.html
@@ -123,8 +123,14 @@
                             <ul class="news">
 
                                 <li class="row-fluid">
+                                    <span class="news-date span3">Feb, 2024</span>
+                                    <span class="news-content span9">I have been invited to give a talk regarding Efficient Continual and On-Device Learning for Edge Computing Platforms at <a href="https://sites.google.com/view/efficientml" target="_blank">EfficientML Reading Group</a> <font color="red">[Talk]</font>
+                                    </span>
+                                </li>
+
+                                <li class="row-fluid">
                                     <span class="news-date span3">Dec, 2023</span>
-                                    <span class="news-content span9">Our paper <a href="">"UR2M: Uncertainty and Resource-Aware Event Detection on Microcontrollers"</a> is accepted to PerCom 2024 (Accpetance Rate: 14.5%) <font color="red">[To appear soon]</font></span>
+                                    <span class="news-content span9">Our paper <a href="papers/articles/jia_ur2m_percom24.pdf" target="_blank">"UR2M: Uncertainty and Resource-Aware Event Detection on Microcontrollers"</a> is accepted to PerCom 2024 (Accpetance Rate: 14.5%) <font color="red">[Paper]</font></span>
                                 </li>
 
                                 <li class="row-fluid">
