--- a/index.html
+++ b/index.html
@@ -211,8 +211,14 @@
 							<ul class="news">
 
 								<li class="row-fluid">
+                                    <span class="news-date span3">Feb, 2024</span>
+                                    <span class="news-content span9">I have been invited to give a talk regarding Efficient Continual and On-Device Learning for Edge Computing Platforms at <a href="https://sites.google.com/view/efficientml" target="_blank">EfficientML Reading Group</a> <font color="red">[Talk]</font>
+                                    </span>
+                                </li>
+
+								<li class="row-fluid">
                                     <span class="news-date span3">Dec, 2023</span>
-                                    <span class="news-content span9">Our paper <a href="">"UR2M: Uncertainty and Resource-Aware Event Detection on Microcontrollers"</a> is accepted to PerCom 2024 (Accpetance Rate: 14.5%) <font color="red">[To appear soon]</font></span>
+                                    <span class="news-content span9">Our paper <a href="papers/articles/jia_ur2m_percom24.pdf" target="_blank">"UR2M: Uncertainty and Resource-Aware Event Detection on Microcontrollers"</a> is accepted to PerCom 2024 (Accpetance Rate: 14.5%) <font color="red">[Paper]</font></span>
                                 </li>
 
 								<li class="row-fluid">
@@ -383,7 +389,7 @@
 										<b>UR2M: Uncertainty and Resource-Aware Event Detection on Microcontrollers</b><br>
 										<font color="#aaaaaa">Hong Jia, <font color="#000000"><u>Young D. Kwon</u></font>, Dong Ma, Nhat Pham, Lorena Qendro, Tam Vu, and Cecilia Mascolo</font><br>
 										<i><font color="red">PerCom 2024</font></i>
-										<!-- | <a href="papers/articles/jia_ur2m_percom24.pdf" target="_blank">PDF</a> -->
+										| <a href="papers/articles/jia_ur2m_percom24.pdf" target="_blank">PDF</a>
 										| <a href="papers/bibs/jia_ur2m_percom24.bib" target="_blank">BibTex</a>
 										<br><award><b>Oral Presentation, Full Paper Acceptance Rate: 14.5%</b></award>
 									</p></li>
@@ -814,13 +820,15 @@
 								<div class="section" id="invited-talks">Invited Talks</div>
 									<ul>
 										
-										<li><a href="#invited-talks">[SenSys 2023]</a>[<b>14 Nov 2023</b>] LifeLearner: Hardware-Aware Meta Continual Learning System for Embedded Computing Platforms. Host: Dr. Tarek Abdelzaher </li>
+										<li><a href="https://sites.google.com/view/efficientml" target="_blank">[EfficientML Reading Group]</a>[<b>13 Feb 2024</b>] Efficient Continual and On-Device Learning for Edge Computing Platforms. Host: Prof. Olga Saukh </li>
 
-										<li><a href="#invited-talks">[SenSys 2023]</a>[<b>12 Nov 2023</b>] On-device Training at the Extreme Edge. Host: Dr. Stephen Xia</li>
+										<li><a href="https://sensys.acm.org/2023/" target="_blank">[SenSys 2023]</a>[<b>14 Nov 2023</b>] LifeLearner: Hardware-Aware Meta Continual Learning System for Embedded Computing Platforms. Host: Dr. Tarek Abdelzaher </li>
+
+										<li><a href="https://sensys.acm.org/2023/" target="_blank">[SenSys 2023]</a>[<b>12 Nov 2023</b>] On-device Training at the Extreme Edge. Host: Dr. Stephen Xia</li>
 
 										<li><a href="#invited-talks">[Cambridge Korea Academic Society]</a>[<b>25 Mar 2023</b>] Deep Learning at the Extreme Edge. Host: Dr. Gwangbin Bae</li>
 										
-										<li><a href="//english.kma.ac.kr/" target="_blank">[Korea Military Academy]</a>[<b>4 Feb 2022</b>] YONO: All You Need To Represent Multiple Dissimilar Neural Networks on Microcontrollers. Host: Prof. Juhee Kim</li>
+										<li><a href="https://en.wikipedia.org/wiki/Korea_Military_Academy" target="_blank">[Korea Military Academy]</a>[<b>4 Feb 2022</b>] YONO: All You Need To Represent Multiple Dissimilar Neural Networks on Microcontrollers. Host: Prof. Juhee Kim</li>
 
 										<li><a href="https://www.kaist.ac.kr/en/" target="_blank">[KAIST]</a>[<b>27 Jan 2022</b>] On-device Continual Learning in Mobile Sensing Applications. Host: Prof. Lik-Hang Lee</li>
 										<li><a href="https://www.kaist.ac.kr/en/" target="_blank">[KAIST]</a>[<b>27 Jan 2022</b>] You Only Need One Pair of Codebooks to Represent Multiple Deep Learning Models on Extremely Resouce-Constrained Devices. Host: Prof. Junehwa Song</li>
