added a student under mentorship

--- a/index.html
+++ b/index.html
@@ -756,6 +756,7 @@
 									<li>&nbsp;&bullet;&nbsp; Anish Das (University of Cambridge, now at Goldman Sachs)</li>
 									<li>&nbsp;&bullet;&nbsp; Nav Leelarathna (University of Cambridge)</li>
 									<li>&nbsp;&bullet;&nbsp; Issam Nedjai (University of Cambridge)</li>
+									<li>&nbsp;&bullet;&nbsp; Cynthia X. Dong (University of Cambridge)</li>
 							    </ul>
 							    <br>
 
