added news regarding ur2m presentation at percom 2024

--- a/log.html
+++ b/log.html
@@ -123,6 +123,12 @@
                             <ul class="news">
 
                                 <li class="row-fluid">
+                                    <span class="news-date span3">Mar, 2024</span>
+                                    <span class="news-content span9">I presented our paper <a href="papers/articles/jia_ur2m_percom24.pdf" target="_blank">"UR2M: Uncertainty and Resource-Aware Event Detection on Microcontrollers"</a> on behalf of 1st author, <a href="https://www.cl.cam.ac.uk/~hj359/" target="_blank">Hong</a>, at <a href="https://www.percom.org/" target="_blank">IEEE PerCom 2024</a> <font color="red">[Talk]</font>
+                                    </span>
+                                </li>
+                                
+                                <li class="row-fluid">
                                     <span class="news-date span3">Feb, 2024</span>
                                     <span class="news-content span9">I have been invited to give a talk regarding Efficient Continual and On-Device Learning for Edge Computing Platforms at <a href="https://sites.google.com/view/efficientml" target="_blank">EfficientML Reading Group</a> <font color="red">[Talk]</font>
                                     </span>
