added a talk regarding ur2m presentation at percom 2024

--- a/index.html
+++ b/index.html
@@ -824,12 +824,14 @@
 						<!--Invited Talks-->
 						<div class="row-fluid">
 							<div class="span12">
-								<div class="section" id="invited-talks">Invited Talks</div>
+								<div class="section" id="invited-talks">Talks</div>
 									<ul>
-										
-										<li><a href="https://sites.google.com/view/efficientml" target="_blank">[EfficientML Reading Group]</a>[<b>13 Feb 2024</b>] Efficient Continual and On-Device Learning for Edge Computing Platforms. Host: Prof. Olga Saukh </li>
 
-										<li><a href="https://sensys.acm.org/2023/" target="_blank">[SenSys 2023]</a>[<b>14 Nov 2023</b>] LifeLearner: Hardware-Aware Meta Continual Learning System for Embedded Computing Platforms. Host: Dr. Tarek Abdelzaher </li>
+										<li><a href="https://www.percom.org/" target="_blank">[PerCom 2024]</a>[<b>12 Mar 2024</b>] UR2M: Uncertainty and Resource-Aware Event Detection on Microcontrollers. Host: Prof. Christine Julien</li>
+
+										<li><a href="https://sites.google.com/view/efficientml" target="_blank">[EfficientML Reading Group]</a>[<b>13 Feb 2024</b>] Efficient Continual and On-Device Learning for Edge Computing Platforms. Host: Prof. Olga Saukh</li>
+
+										<li><a href="https://sensys.acm.org/2023/" target="_blank">[SenSys 2023]</a>[<b>14 Nov 2023</b>] LifeLearner: Hardware-Aware Meta Continual Learning System for Embedded Computing Platforms. Host: Dr. Tarek Abdelzaher</li>
 
 										<li><a href="https://sensys.acm.org/2023/" target="_blank">[SenSys 2023]</a>[<b>12 Nov 2023</b>] On-device Training at the Extreme Edge. Host: Dr. Stephen Xia</li>
 
