added a stat for the pros paper

--- a/index.html
+++ b/index.html
@@ -439,6 +439,7 @@
 										| <a href="papers/articles/pham_pros_mobicom22.pdf" target="_blank">PDF</a>
 										| <a href="papers/bibs/pham_pros_mobicom22.bib" target="_blank">BibTex</a>
 										| <a href="https://dl.acm.org/doi/10.1145/3495243.3560533" target="_blank">Link</a>
+										<br><award><b>Oral Presentation, Full Paper Acceptance Rate: 17.8%</b></award>
 									</p></li>
 
 									<li id="publication-few-shot">
