PAPER. added news and papers for tinytrain, icml24 paper

--- a/log.html
+++ b/log.html
@@ -123,6 +123,11 @@
                             <ul class="news">
 
                                 <li class="row-fluid">
+                                    <span class="news-date span3">May, 2024</span>
+                                    <span class="news-content span9">Our paper <a href="papers/articles/kwon_tinytrain_icml24.pdf" target="_blank">"TinyTrain: Resource-Aware Task-Adaptive Sparse Training of DNNs at the Data-Scarce Edge"</a> is accepted by ICML 2024 (Accpetance Rate: 27.5%) <font color="red">[Paper]</font></span>
+                                </li>
+
+                                <li class="row-fluid">
                                     <span class="news-date span3">Mar, 2024</span>
                                     <span class="news-content span9">I presented our paper <a href="papers/articles/jia_ur2m_percom24.pdf" target="_blank">"UR2M: Uncertainty and Resource-Aware Event Detection on Microcontrollers"</a> on behalf of 1st author, <a href="https://www.cl.cam.ac.uk/~hj359/" target="_blank">Hong</a>, at <a href="https://www.percom.org/" target="_blank">IEEE PerCom 2024</a> <font color="red">[Talk]</font>
                                     </span>
