--- a/index.html
+++ b/index.html
@@ -211,6 +211,11 @@
 							<ul class="news">
 
 								<li class="row-fluid">
+                                    <span class="news-date span3">May, 2024</span>
+                                    <span class="news-content span9">Our paper <a href="papers/articles/kwon_tinytrain_icml24.pdf" target="_blank">"TinyTrain: Resource-Aware Task-Adaptive Sparse Training of DNNs at the Data-Scarce Edge"</a> is accepted by ICML 2024 (Accpetance Rate: 27.5%) <font color="red">[Paper]</font></span>
+                                </li>
+
+								<li class="row-fluid">
                                     <span class="news-date span3">Mar, 2024</span>
                                     <span class="news-content span9">I presented our paper <a href="papers/articles/jia_ur2m_percom24.pdf" target="_blank">"UR2M: Uncertainty and Resource-Aware Event Detection on Microcontrollers"</a> on behalf of 1st author, <a href="https://www.cl.cam.ac.uk/~hj359/" target="_blank">Hong</a>, at <a href="https://www.percom.org/" target="_blank">IEEE PerCom 2024</a> <font color="red">[Talk]</font>
                                     </span>
@@ -357,15 +362,6 @@
 							<div class="span12">
 								<div class="section">Preprints</div>
 								<ul>
-									
-									<li id="preprints-tinytrain">
-									<p>
-										<b>TinyTrain: Deep Neural Network Training at the Extreme Edge</b><br>
-										<font color="#aaaaaa"><font color="#000000"><u>Young D. Kwon</u></font>, Rui Li, Stylianos I. Venieris, Jagmohan Chauhan, Nicholas D. Lane, and Cecilia Mascolo</font><br>
-										<i><font color="red">arXiv 2023</font></i>
-										| <a href="papers/articles/kwon_tinytrain_2023.pdf" target="_blank">PDF</a>
-										| <a href="https://arxiv.org/abs/2307.09988" target="_blank">Link</a>
-									</p></li>
 
 									<li id="preprints-hidenseek">
 									<p>
@@ -389,6 +385,16 @@
 							<div class="span12">
 								<div class="section">Selected Publications</div>
 								<ul>
+
+									<li id="publication-tinytrain">
+									<p>
+										<b>TinyTrain: Resource-Aware Task-Adaptive Sparse Training of DNNs at the Data-Scarce Edge</b><br>
+										<font color="#aaaaaa"><font color="#000000"><u>Young D. Kwon</u></font>, Rui Li, Stylianos I. Venieris, Jagmohan Chauhan, Nicholas D. Lane, and Cecilia Mascolo</font><br>
+										<i><font color="red">ICML 2024</font></i>
+										| <a href="papers/articles/kwon_tinytrain_icml24.pdf" target="_blank">PDF</a>
+										| <a href="papers/bibs/kwon_tinytrain_icml24.bib" target="_blank">BibTex</a>
+										| <a href="https://arxiv.org/abs/2307.09988" target="_blank">Link</a>
+									</p></li>
 
 									<li id="publication-ur2m">
 									<p>
