--- a/research.html
+++ b/research.html
@@ -140,15 +140,6 @@
 							<div class="span12">
 								<div class="section">Preprints</div>
 								<ul>
-									
-									<li id="preprints-tinytrain">
-									<p>
-										<b>TinyTrain: Deep Neural Network Training at the Extreme Edge</b><br>
-										<font color="#aaaaaa"><font color="#000000"><u>Young D. Kwon</u></font>, Rui Li, Stylianos I. Venieris, Jagmohan Chauhan, Nicholas D. Lane, and Cecilia Mascolo</font><br>
-										<i><font color="red">arXiv 2023</font></i>
-										| <a href="papers/articles/kwon_tinytrain_2023.pdf" target="_blank">PDF</a>
-										| <a href="https://arxiv.org/abs/2307.09988" target="_blank">Link</a>
-									</p></li>
 
 									<li id="preprints-hidenseek">
 									<p>
@@ -173,6 +164,16 @@
 								<div class="section">Publications</div>
 								<ul>
 
+									<li id="publication-tinytrain">
+									<p>
+										<b>TinyTrain: Resource-Aware Task-Adaptive Sparse Training of DNNs at the Data-Scarce Edge</b><br>
+										<font color="#aaaaaa"><font color="#000000"><u>Young D. Kwon</u></font>, Rui Li, Stylianos I. Venieris, Jagmohan Chauhan, Nicholas D. Lane, and Cecilia Mascolo</font><br>
+										<i><font color="red">ICML 2024</font></i>
+										| <a href="papers/articles/kwon_tinytrain_icml24.pdf" target="_blank">PDF</a>
+										| <a href="papers/bibs/kwon_tinytrain_icml24.bib" target="_blank">BibTex</a>
+										| <a href="https://arxiv.org/abs/2307.09988" target="_blank">Link</a>
+									</p></li>
+									
 									<li id="publication-ur2m">
 									<p>
 										<b>UR2M: Uncertainty and Resource-Aware Event Detection on Microcontrollers</b><br>
