NEWS. updated my attendance at ICML

--- a/log.html
+++ b/log.html
@@ -123,6 +123,12 @@
                             <ul class="news">
 
                                 <li class="row-fluid">
+                                    <span class="news-date span3">Jul, 2024</span>
+                                    <span class="news-content span9">I will attend <a href="https://icml.cc/" target="_blank">ICML 2024</a> to present our paper <a href="papers/articles/kwon_tinytrain_icml24.pdf" target="_blank">"TinyTrain: Resource-Aware Task-Adaptive Sparse Training of DNNs at the Data-Scarce Edge"</a>. See you all in Vienna, Austria! <font color="red">[Talk]</font>
+                                    </span>
+                                </li>
+
+                                <li class="row-fluid">
                                     <span class="news-date span3">May, 2024</span>
                                     <span class="news-content span9">Our paper <a href="papers/articles/kwon_tinytrain_icml24.pdf" target="_blank">"TinyTrain: Resource-Aware Task-Adaptive Sparse Training of DNNs at the Data-Scarce Edge"</a> is accepted by ICML 2024 (Accpetance Rate: 27.5%) <font color="red">[Paper]</font></span>
                                 </li>
