NEWS. added my 1st product in industry

--- a/log.html
+++ b/log.html
@@ -123,6 +123,12 @@
                             <ul class="news">
 
                                 <li class="row-fluid">
+                                    <span class="news-date span3">Aug, 2024</span>
+                                    <span class="news-content span9">Our team's recent research effort has been commercialised with <a href="https://research.samsung.com/blog/Sentimental-and-Object-Preserving-On-Device-AI-Wallpaper" target="_blank">On-device AI Wallpaper</a> enabled on Samsung AI phone series: Galaxy S24, Z Flip 6 and Fold 6! <font color="red">[AI Product]</font>
+                                    </span>
+                                </li>
+
+                                <li class="row-fluid">
                                     <span class="news-date span3">Jul, 2024</span>
                                     <span class="news-content span9">I will attend <a href="https://icml.cc/" target="_blank">ICML 2024</a> to present our paper <a href="papers/articles/kwon_tinytrain_icml24.pdf" target="_blank">"TinyTrain: Resource-Aware Task-Adaptive Sparse Training of DNNs at the Data-Scarce Edge"</a>. See you all in Vienna, Austria! <font color="red">[Talk]</font>
                                     </span>
